[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Botoes/Ok.png" type="Texture" id=1]
[ext_resource path="res://Assets/Imagens/NameInput.png" type="Texture" id=2]
[ext_resource path="res://Assets/Botoes/Ok_Hover.png" type="Texture" id=3]
[ext_resource path="res://Assets/Botoes/No_Hover.png" type="Texture" id=4]
[ext_resource path="res://Assets/Botoes/No_Selected.png" type="Texture" id=5]
[ext_resource path="res://Assets/Botoes/Ok_Selected.png" type="Texture" id=6]
[ext_resource path="res://Assets/Botoes/No.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fontes/PinkChicken-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Scripts/NameInput.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 8 )

[node name="Nome" type="CanvasLayer"]
layer = 100
script = ExtResource( 9 )

[node name="Overlay" type="ColorRect" parent="."]
visible = false
margin_right = 1922.0
margin_bottom = 1084.0
color = Color( 0, 0, 0, 0.572549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoClick" type="Control" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1082.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInp" type="NinePatchRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1097.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="LineEdit" parent="."]
visible = false
margin_left = 777.988
margin_top = 520.055
margin_right = 1214.99
margin_bottom = 605.055
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "NOME"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Yes" type="TextureButton" parent="."]
visible = false
margin_left = 824.262
margin_top = 652.629
margin_right = 952.262
margin_bottom = 752.629
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="TextureButton" parent="."]
visible = false
margin_left = 1042.51
margin_top = 658.986
margin_right = 1170.51
margin_bottom = 758.986
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="NameInput" to="." method="_on_NameInput_text_changed"]
[connection signal="text_entered" from="NameInput" to="." method="_on_NameInput_text_entered"]
[connection signal="pressed" from="Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="No" to="." method="_on_No_pressed"]
